hphp/hack/test/typecheck/expression_trees/postfix_minus_minus_error1.php.exp
File "postfix_minus_minus_error1.php", line 7, characters 8-8:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "postfix_minus_minus_error1.php", line 7, characters 8-8:
literal is not allowed in write context (Parsing[1002])
